# mailadler

./: .clang-format  .clang-tidy  .gitignore  .valgrind.supp  AGENTS.md  CMakeLists.txt  KONVENTIONEN.md  README.md  SOUL.md  agent_update.sh  beobachten.sh  mailadler.pro  mailadler_en_US.ts  mailadler_es_ES.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pruefen.sh  translations.qrc
.github/workflows/: bauen-und-pruefen.yml  ci.yml
.hermes/plans/: 2026-06-22_datenbank-implementierung.md  2026-06-22_dienste.md  2026-06-22_e2e-flatpak.md  2026-06-22_imap-nachrichten-konto-ui.md  2026-06-22_imap-verbindung.md  2026-06-22_master-plan.md  2026-06-22_qml-fenster-integration.md  2026-06-22_smtp-verbindung.md  2026-06-22_startup-flow.md  2026-06-22_ui-verdrahtung.md  2026-06-22_windows-build.md  2026-06-22_zwischenspeicher.md  ROADMAP.md
cmake/: KompilierWarnungen.cmake  SichererBau.cmake
pruefungen/: CMakeLists.txt  tst_datenbank.cpp  tst_imap_verbindung.cpp  tst_konto_dienst.cpp  tst_postfach_dienst.cpp  tst_smtp_verbindung.cpp  tst_zwischenspeicher.cpp
quelltext/: CMakeLists.txt
quelltext/anwendung/: CMakeLists.txt  main.cpp
quelltext/bibliothek/: CMakeLists.txt
quelltext/bibliothek/dienst/: konto_dienst.cpp  konto_dienst.h  postfach_dienst.cpp  postfach_dienst.h
quelltext/bibliothek/kern/: anhang.h  konto.cpp  konto.h  nachricht.cpp  nachricht.h  postfach.cpp  postfach.h  qt_alias.h
quelltext/bibliothek/protokoll/: imap_verbindung.cpp  imap_verbindung.h  smtp_verbindung.cpp  smtp_verbindung.h
quelltext/bibliothek/speicher/: datenbank.cpp  datenbank.h  zwischenspeicher.cpp  zwischenspeicher.h
quelltext/oberflaeche/: CMakeLists.txt
quelltext/oberflaeche/ansichtmodelle/: erstellen_ansicht_modell.cpp  erstellen_ansicht_modell.h  konto_ansicht_modell.cpp  konto_ansicht_modell.h  konto_auswahl_modell.cpp  konto_auswahl_modell.h  nachricht_ansicht_modell.cpp  nachricht_ansicht_modell.h  nachrichten_liste_modell.cpp  nachrichten_liste_modell.h  ordner_liste_modell.cpp  ordner_liste_modell.h
quelltext/oberflaeche/qml/: ErstellenAnsicht.qml  HauptFenster.qml  NachrichtAnsicht.qml  NachrichtenListe.qml
tests/: test_main.cpp  tests.pro
uebersetzungen/: adlermail_de.ts  adlermail_en.ts  adlermail_es.ts
verpackung/: org.adlermail.AdlerMail.desktop  org.mailadler.MailAdler.desktop
verpackung/flatpak/: org.adlermail.AdlerMail.yaml  org.mailadler.MailAdler.yaml
vorlagen/: header_vorlage.h  pre-commit.hook  test_vorlage.cpp
